recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:6: error: not found: value Spiral
	Spiral(n-1,t ,l+3, i);
        ^