recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(n:Int, t:Int, l:Int, i:Int)    {
	
	avance(l);
	gauche(t);
	Spiral(n-1,t ,l+3, i);
};
